# SRP_demo_mobile

./: ASTROX-TEMPLATE.md  Cargo.toml  astro.config.mjs  astro_errors.txt  build_debug.txt  build_errors.txt  build_log.txt  build_log_final.txt  build_log_utf8.txt  build_output.txt  build_verbose.txt  cargo_errors.txt  components.json  errors.txt  full_build_log.txt  notes.db  package-lock.json  package.json  readme.md  srp_portal.db  tailwind.config.mjs  tsconfig.json
.github/workflows/: deploy.yml
plans/: Big_plan.md  josh_translation.md  kamil_userflows.md  robyn_erds.md  styleguide_SRP.md  summary_what_jeremy_needs.md
src/: db.rs  env.d.ts  main.rs  models.rs
src/api_handlers/: auth.rs  ecs_documents.rs  ecs_inspection.rs  ecs_scheduler.rs  logistics.rs  mod.rs  notes.rs  stratas.rs  surveys.rs  timelines.rs
src/components/: AdminSettings.tsx  AppointmentManagement.tsx  AppointmentReview.tsx  AvailabilityManager.tsx  ClientProfileView.tsx  ClientUsers.tsx  ContactManagement.tsx  DataSync.tsx  DocumentCenter.tsx  InspectionExecution.tsx  InspectionScheduler.tsx  InspectorDashboard.tsx  LoginForm.tsx  NotificationsCenter.tsx  PDFGenerator.tsx  ProjectSummary.tsx  PropertyProfile.tsx  RequestManagement.tsx  Sidebar.tsx  StrataDetail.tsx  StrataManagement.tsx  SurveyEngine.tsx  SurveyHub.tsx  Timelines.tsx  UserManagement.tsx  display-server-time.tsx  notes-app.tsx
src/content/: config.ts
src/hooks/: use-toast.ts
src/layouts/: BaseLayout.astro  DashboardLayout.astro  Layout.astro
src/lib/: base.ts  email.ts  mockApi.ts  store.ts  types.ts
(+46 files in other folders)
