[package]
name = "astrox-template" 
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "compression-gzip", "cors"] }
tracing = "0.1.40"
bevy = { version = "0.15", default-features = false, features = ["multi_threaded"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
urlencoding = "2.1"
crossbeam-channel = "0.5"
bevy_ecs = "0.18.0"
rand = "0.9"
